@@ -28,6 +28,7 @@ my %WriteMakefileArgs = (
     "Dist::Zilla::Plugin::CopyFilesFromBuild" => 0,
     "Dist::Zilla::Plugin::Git::Contributors" => "0.007",
     "Dist::Zilla::Plugin::Git::NextVersion" => 0,
+    "Dist::Zilla::Plugin::GitHub::UploadRelease" => 0,
     "Dist::Zilla::Plugin::GithubMeta" => "0.36",
     "Dist::Zilla::Plugin::InsertCopyright" => "0.001",
     "Dist::Zilla::Plugin::InstallGuide" => 0,
@@ -97,6 +98,7 @@ my %FallbackPrereqs = (
   "Dist::Zilla::Plugin::CopyFilesFromBuild" => 0,
   "Dist::Zilla::Plugin::Git::Contributors" => "0.007",
   "Dist::Zilla::Plugin::Git::NextVersion" => 0,
+  "Dist::Zilla::Plugin::GitHub::UploadRelease" => 0,
   "Dist::Zilla::Plugin::GithubMeta" => "0.36",
   "Dist::Zilla::Plugin::InsertCopyright" => "0.001",
   "Dist::Zilla::Plugin::InstallGuide" => 0,
