@@ -1,7 +1,8 @@
 Revision history for Dist-Zilla-PluginBundle-NGLENN
 
 {{$NEXT}}
-
+    added GitHub release upload
+    copy INSTALL and LICENSE to repo
 0.04      2017-11-22 14:55:50+01:00 Europe/Berlin
     Add install guide
     fix build
